chore(kc26): add identity provider storage provider
Signed-off-by: opdt <IT-Systemhaus.SEP5-Online-Team-OPDT@arbeitsagentur.de>